# GBA_Emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tmp
include/Client/: C_Game.hpp  C_SceneManager.hpp
include/Core/: C_Core.hpp  C_SceneManager.hpp
include/ECS/Components/: Apple.hpp  Background.hpp  Boost.hpp  Bullet.hpp  CPU.hpp  Charging.hpp  Components.hpp  Controllable.hpp  Destroyable.hpp  Drawable.hpp  DrawableSnake.hpp  Force.hpp  Lobby.hpp  MapSelected.hpp  Memory.hpp  Menu.hpp  Message.hpp  Monster.hpp  ParticleSystem.hpp  Player.hpp  PlayerName.hpp  Position.hpp  Score.hpp  Sound.hpp  TitleScreen.hpp  UIHpBar.hpp  Velocity.hpp  Wall.hpp  Window.hpp
include/ECS/Registry/: Entity.hpp  EntityManager.ipp  Mod.hpp  Registry.hpp  Registry.ipp  Sparse_array.hpp  Sparse_array.ipp  Zipper.hpp  Zipper_iterator.hpp
include/ECS/Systems/: C_Systems.hpp
include/Gba_Utils/: GbaUtils.hpp
src/: main.cpp
src/core/: core.cpp
src/core/scene/: scene.cpp
src/game/: game.cpp
src/game/scene/: scene.cpp
src/gba_utils/: dec.cpp  di.cpp  fetch.cpp  jp.cpp  jr.cpp  ld.cpp  loop.cpp  xor.cpp
src/systems/: background_system.cpp  charge_system.cpp  chat_system.cpp  clearer_system.cpp  destroy_system.cpp  displayer_system.cpp  draw_system.cpp  execute_system.cpp  force_system.cpp  lobby_system.cpp  menu_system.cpp  particle_system.cpp  position_system.cpp  sound_system.cpp  titlescreen_system.cpp  uiHpBar_system.cpp  wall_system.cpp
